set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

add_executable(eigen kalman_filter.cpp tracking.cpp main.cpp)
target_include_directories(eigen PUBLIC "..")
install(TARGETS eigen CONFIGURATIONS Release RUNTIME DESTINATION bin)

